# postgresql-mcp-server

./: .env.example  .gitignore  CONTRIBUTING.md  PUBLISHING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  server.json
.github/workflows/: publish-pypi.yml  publish-testpypi.yml
src/postgresql_mcp_server/: __init__.py  server.py
tests/: test_safety.py
