[project]
name = "mdev-postgresql-mcp-server"
version = "0.1.1"
description = "Model Context Protocol server for PostgreSQL database inspection and querying"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    'mcp>=1.11.0',
    'psycopg2-binary>=2.9.0',
    'python-dotenv>=1.0.0',
    'pydantic>=2.0.0',
    'typing-extensions>=4.8.0',
]
license = {text = "MIT"}
authors = [
    {name = "Project contributors"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[project.scripts]
"mdev-postgresql-mcp-server" = "postgresql_mcp_server.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/postgresql_mcp_server"]
